--- a/fundamentos/secao-3-introducao-a-html-css/dia-1-estruturas-de-pagina/exercicio-dia-1.html
+++ b/fundamentos/secao-3-introducao-a-html-css/dia-1-estruturas-de-pagina/exercicio-dia-1.html
@@ -14,6 +14,8 @@
         <li><a href="#juliana">Juliana</a></li>
       </ul>
       <br>
+      <h3>Para mais frases inspiradoras como as listadas abaixo acesse:</h3>
+      <a href="https://www.google.com.br/" target="_blank">Google.com</a>
       <br>
       <br>
       <br>
@@ -22,29 +24,42 @@
       <br>
       <br>
       <br>
-      <br>
-      <br>
-      <p id="adilson"><em>“Escolha uma ideia. Faça dessa ideia a sua vida. Pense nela, sonhe com ela, viva pensando nela. Deixe cérebro, músculos, nervos, todas as partes do seu corpo serem preenchidas com essa ideia. Esse é o caminho para o sucesso”</em></p>
-      <br>
-      <br>
-      <br>
-      <br>
-      <p id="vinicius"><em>“Escolha uma ideia. Faça dessa ideia a sua vida. Pense nela, sonhe com ela, viva pensando nela. Deixe cérebro, músculos, nervos, todas as partes do seu corpo serem preenchidas com essa ideia. Esse é o caminho para o sucesso”</em></p>
+      <p id="adilson"><em>"O Hoje!Resolva seu problema!<br> Há muito tempo que você se propõe reformar sua vida,<br>
+      melhorar seus atos, cessar definitivamente suas fraquezas. <br>
+      Vamos, então, começar a partir deste momento!"</em></p>
       <br>
       <br>
       <br>
       <br>
-      <p id="erickson"><em>“Quando uma criatura humana desperta para um grande sonho e sobre ele lança toda a força de sua alma, todo o universo conspira a seu favor”</em></p>
+      <p id="vinicius"><em>“Escolha uma ideia. Faça dessa ideia a sua vida. <br>
+      Pense nela, sonhe com ela, viva pensando nela.<br> Deixe cérebro, músculos, nervos, todas as<br> 
+      partes do seu corpo serem preenchidas com essa ideia<br> 
+      Esse é o caminho para o sucesso”</em></p>
       <br>
       <br>
       <br>
       <br>
-      <p id="wilson"><e>“Nossa maior fraqueza está em desistir. O caminho mais certo de vencer é tentar mais uma vez”</e></p>
+      <p id="erickson"><em>“Quando uma criatura humana<br> desperta para um grande sonho<br>
+      e sobre ele lança toda a força de sua alma,<br>
+      todo o universo conspira a seu favor”</em></p>
       <br>
       <br>
       <br>
       <br>
-      <p id="juliana"><em>“Se fracassar, ao menos que fracasse ousando grandes feitos, de modo que a sua postura não seja nunca a dessas almas frias e tímidas que não conhecem nem a vitória nem a derrota” </em></p>
+      <p id="wilson"><e>“Lembre-se de que colheremos, infalivelmente,<br>
+      aquilo que houvermos semeado.<br>
+      Se estamos sofrendo,<br>
+      é porque estamos colhendo os frutos amargos<br>
+      das sementeiras errôneas do passado.”</e></p>
+      <br>
+      <br>
+      <br>
+      <br>
+      <p id="juliana"><em>“Trate com afabilidade a todos.<br>
+     O vizinho que senta a seu lado na condução<br>
+      não é seu inimigo, nem seu concorrente.<br>
+     Trata-se, sempre, de seu irmão,<br>
+     a quem você precisa acolher com simpatia.” </em></p>
 
   </body>
 </html>
