realizadas alterações no exercício dia 1 seção 3

--- a/fundamentos/secao-3-introducao-a-html-css/dia-1-estruturas-de-pagina/exercicio-dia-1.html
+++ b/fundamentos/secao-3-introducao-a-html-css/dia-1-estruturas-de-pagina/exercicio-dia-1.html
@@ -24,42 +24,41 @@
       <br>
       <br>
       <br>
-      <p id="adilson"><em>"O Hoje!Resolva seu problema!<br> Há muito tempo que você se propõe reformar sua vida,<br>
-      melhorar seus atos, cessar definitivamente suas fraquezas. <br>
-      Vamos, então, começar a partir deste momento!"</em></p>
+      <h3 id="adilson"><em>"O Hoje!Resolva seu problema!<br> Há muito tempo que você se propõe <br> 
+      reformar sua vida, melhorar seus atos, <br>
+      cessar definitivamente suas fraquezas. <br>
+      Vamos, então, começar a partir deste momento!"<br></em></h3>
       <br>
       <br>
       <br>
       <br>
-      <p id="vinicius"><em>“Escolha uma ideia. Faça dessa ideia a sua vida. <br>
+      <h3 id="vinicius"><em>“Escolha uma ideia. Faça dessa ideia a sua vida. <br>
       Pense nela, sonhe com ela, viva pensando nela.<br> Deixe cérebro, músculos, nervos, todas as<br> 
-      partes do seu corpo serem preenchidas com essa ideia<br> 
-      Esse é o caminho para o sucesso”</em></p>
+      partes do seu corpo serem preenchidas <br>
+      com essa ideia. Esse é o caminho para o sucesso”</em></h3>
       <br>
       <br>
       <br>
       <br>
-      <p id="erickson"><em>“Quando uma criatura humana<br> desperta para um grande sonho<br>
+      <h3 id="erickson"><em>“Quando uma criatura humana<br> desperta para um grande sonho<br>
       e sobre ele lança toda a força de sua alma,<br>
-      todo o universo conspira a seu favor”</em></p>
+      todo o universo conspira a seu favor”</em></h3>
       <br>
       <br>
       <br>
       <br>
-      <p id="wilson"><e>“Lembre-se de que colheremos, infalivelmente,<br>
-      aquilo que houvermos semeado.<br>
-      Se estamos sofrendo,<br>
-      é porque estamos colhendo os frutos amargos<br>
-      das sementeiras errôneas do passado.”</e></p>
+      <h3 id="wilson"><e>“Lembre-se de que colheremos,<br> infalivelmente, aquilo que houvermos semeado.<br>
+      Se estamos sofrendo, é porque estamos colhendo<br>
+      os frutos amargos das sementeiras errôneas do passado.”</e></h3>
       <br>
       <br>
       <br>
       <br>
-      <p id="juliana"><em>“Trate com afabilidade a todos.<br>
+      <h3 id="juliana"><em>“Trate com afabilidade a todos.<br>
      O vizinho que senta a seu lado na condução<br>
       não é seu inimigo, nem seu concorrente.<br>
      Trata-se, sempre, de seu irmão,<br>
-     a quem você precisa acolher com simpatia.” </em></p>
+     a quem você precisa acolher com simpatia.” </em></h3>
 
   </body>
 </html>
