arquivo .css criado

--- a/fundamentos/secao-3-introducao-a-html-css/dia-1-estruturas-de-pagina/exercicio-dia-1.html
+++ b/fundamentos/secao-3-introducao-a-html-css/dia-1-estruturas-de-pagina/exercicio-dia-1.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-  </head>
-  <body>
+    <link rel="stylesheet" type="text/css" href="exercicio-dia-1.css">
+    </head>
+    
+    <body>
     <h1>Exercícios</h1>
       <ul>
         <li><a href="#adilson">Adilson</a></li>
