--- a/fundamentos/secao-6-html-css-forms-flexBox-responsive/form.html
+++ b/fundamentos/secao-6-html-css-forms-flexBox-responsive/form.html
@@ -3,22 +3,24 @@
   <head>
   <meta charset="UTF-8">
   <title>Formulário de cadastro TrybeTrip</title>
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> 
   <link rel="stylesheet" href="style.css">
   </head>
   <body>
-   <header id="header"> 
-    <h1>Formulário para cadastro TrybeTrip 8^)</h1>
+   <header id="header" class="card-body"> 
+    <h1>Formulário para cadastro TrybeTrip</h1>
    </header>
    <form action="" method="">
     <fieldset>
-      <label for="fullname">Nome Completo:</label>
+      <label for="fullname" class="card-text">Nome Completo:</label>
         <input type="text" id="fullname" name="fullname" placeholder="Digite seu nome completo aqui" maxlength="40" minlength="10" required>
       <br>
       <br>
-      <label for="email">Endereço de E-mail:</label>
+      <label for="email" class="card-text">Endereço de E-mail:</label>
         <input type="email" id="email" name="email" placeholder="Digite seu E-mail aqui" maxlength="50" minlength="10" required >
       <br>
-      <label for="destination1">Cidade</label>
+      <label for="destination1" class="card-text">Cidade</label>
         <input type="radio" id="detination1" className="
         radios" name="destinations" value="Cidade" required>
       <label for="destination2">Campo</label>
@@ -47,8 +49,8 @@
         <input type="checkbox" name="agreement" id="agreement" required>        
     </fieldset>
     <br>
-      <button type="submit" id="submit-btn">Participar do concurso TrybeTrip</button>
-      <button type="button" id="clear-btn">Apagar informações</button>
+      <button type="submit" id="submit-btn" class="btn btn-success">Participar do concurso TrybeTrip</button>
+      <button type="button" id="clear-btn" class="btn btn-secondary">Apagar informações</button>
    </form>
 
     <main></main>
